// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Majesticons icon 1`] = `
<svg
  aria-label="Majesticons icon example"
  className="Icon__Test__root"
  fill="none"
  style={
    {
      "fill": "none",
      "fontSize": "2em",
    }
  }
  viewBox="0 0 24 24"
>
  <path
    d="M18 19V5a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9 6.001V6m0 3.001V9m3 .001V9m0-2.999V6m3 .001V6m0 3.001V9m-6 3.001V12m3 .001V12"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
</svg>
`;

exports[`Icons Material icon 1`] = `
<svg
  aria-label="Material icon example"
  className="Icon__Test__root"
  style={
    {
      "fontSize": "2em",
    }
  }
  viewBox="0 0 24 24"
>
  <path
    d="M17 1.01 7 1c-1.1 0-1.99.9-1.99 2v18c0 1.1.89 2 1.99 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z"
  />
</svg>
`;

exports[`Icons Vaadin icon 1`] = `
<svg
  aria-label="Vaadin icon example"
  className="Icon__Test__root"
  style={
    {
      "fontSize": "2em",
    }
  }
  viewBox="0 0 16 16"
>
  <path
    d="M4 1v14h8v-14h-8zM9 14h-2v-1h2v1zM11 12h-6v-9h6v9z"
  />
</svg>
`;
